# Totodoro

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Main.qml  README.md  conanfile.py  intall_conan.bat  main.cpp
config/: CMakeLists.txt
gateway/: CMakeLists.txt  Config.cmake.in  Gateway.cpp  Gateway.h  generated_api.py
gateway/command/: CreateSessionCommand.cpp  CreateSessionCommand.h  GetSessionByIdCommand.cpp  GetSessionByIdCommand.h  GetSessionsCommand.h  IApiCommand.h  UpdateSessionCommand.cpp  UpdateSessionCommand.h
gateway/command/pomodoro/: CreateSessionCommand.cpp  CreateSessionCommand.h  DeleteSessionCommand.cpp  DeleteSessionCommand.h  GetSessionByIdCommand.cpp  GetSessionByIdCommand.h  GetSessionsCommand.cpp  GetSessionsCommand.h  UpdateSessionCommand.cpp  UpdateSessionCommand.h
gateway/command/taskmanagement/: CreateTaskCommand.cpp  CreateTaskCommand.h  CreateTaskGroupCommand.cpp  CreateTaskGroupCommand.h  DeleteTaskCommand.cpp  DeleteTaskCommand.h  DeleteTaskGroupCommand.cpp  DeleteTaskGroupCommand.h  GetTaskGroupsCommand.cpp  GetTaskGroupsCommand.h  GetTasksCommand.cpp  GetTasksCommand.h  UpdateTaskCommand.cpp  UpdateTaskCommand.h  UpdateTaskGroupCommand.cpp  UpdateTaskGroupCommand.h
gateway/command/user/: CreateUserCommand.cpp  CreateUserCommand.h  GetSettingsCommand.cpp  GetSettingsCommand.h  GetUserCommand.cpp  GetUserCommand.h  UpdateSettingsCommand.cpp  UpdateSettingsCommand.h  UpdateUserCommand.cpp  UpdateUserCommand.h
gateway/common/: ApiResponse.h  CommonDefine.h  ConfigManager.cpp  ConfigManager.h  PomodoroProperties.cpp  PomodoroProperties.h  Properties.h  TaskProperties.cpp  TaskProperties.h  UserProperties.cpp  UserProperties.h
gateway/connection/: SQLiteConnection.cpp  SQLiteConnection.h
gateway/controller/: PomodoroOpenApiController.cpp  PomodoroOpenApiController.h
gateway/factory/: ApiClientFactory.cpp  ApiClientFactory.h  ApiCommandFactory.h  ApiGatewayManagerFactory.cpp  ApiGatewayManagerFactory.h  IPomodoroApiClientFactory.h  PomodoroApiClientFactory.cpp  PomodoroApiClientFactory.h  RouteHandlerFactory.cpp  RouteHandlerFactory.h
gateway/handler/: IResponseHandler.h  JsonResponseHandler.cpp  JsonResponseHandler.h
gateway/helper/: SessionDataTransformer.cpp  SessionDataTransformer.h  TimeTransformer.cpp  TimeTransformer.h
gateway/manager/: IApiGatewayManager.h  PomodoroApiGatewayManager.cpp  PomodoroApiGatewayManager.h  TaskManagementApiGatewayManager.cpp  TaskManagementApiGatewayManager.h  UserApiGatewayManager.cpp  UserApiGatewayManager.h
gateway/processor/: AsyncRequestProcessor.cpp  AsyncRequestProcessor.h
gateway/routes/: IRouteHandler.h  RequestRouter.cpp  RequestRouter.h  SessionRouteHandler.cpp  SessionRouteHandler.h  TaskManagementRouteHandler.cpp  TaskManagementRouteHandler.h  UserRouteHandler.cpp  UserRouteHandler.h
microservices/: CMakeLists.txt  CMakeUserPresets.json
microservices/common/: ConfigManager.cpp  ConfigManager.h
microservices/common/proto/: TaskManagement.proto
microservices/common/service-discovery/: ConsulDiscovery.cpp  ConsulDiscovery.h
microservices/config/: config.yaml
microservices/connection/: SQLiteConnection.cpp  SQLiteConnection.h
microservices/docs/: class_diagram.txt
microservices/openapi/: pomodoro_service.swagger.json  user_service.swagger.json
microservices/proto/: notification.proto  pomodoro.proto  statistic.proto  taskmanagement.proto
microservices/service-discovery/: ConsulDiscovery.cpp  ConsulDiscovery.h  IServiceDiscovery.h
microservices/services/: CMakeLists.txt
microservices/services/task-management/: CMakeLists.txt  TaskManagemenService.h  TaskManagementService.cpp  main.cpp
microservices/services/userprofile/: CMakeLists.txt  UserProfileService.cpp  UserProfileService.h  main.cpp
microservices/services/userprofile/handlers/: UserProfileHandler.cpp  UserProfileHandler.h
microservices/services/userprofile/models/: User.cpp  User.h
microservices/services/userprofile/repositories/: IUserRepository.h  SQLiteUserRepository.cpp  SQLiteUserRepository.h
microservices/services/userprofile/utils/: Utils.h
qmlmodules/common/: CMakeLists.txt  WindowControl.qml
qmlmodules/common/buttons/: CustomButton.qml  CustomButtonBackground.qml  CustomButtonContent.qml
qmlmodules/common/draggers/: WindowDragger.qml
qmlmodules/common/images/: RoundedImage.qml
qmlmodules/common/menus/: MenuTab.qml  MenuTabs.qml
qmlmodules/common/shapes/: RoundedRectangle.qml
qmlmodules/common/views/: DialogFrameView.qml
qmlmodules/mediaplayer/: CMakeLists.txt  MediaButton.qml  MediaEnumeration.qml  MediaPlayer.qml
qmlmodules/task_group_list/: CMakeLists.txt  GroupItem.qml  TaskGroupItem.qml  TaskGroupListPanel.qml  TaskGroupListTitlePanel.qml  TaskGroupProgressBar.qml
qmlmodules/tasks_list/: CMakeLists.txt  OverlayedImage.qml  TaskItem.qml  TasksListPanel.qml  TasksListView.qml
services/: CMakeLists.txt  Config.cmake.in  ServicesConfig.cmake.in
services/apigateway-service/: CMakeLists.txt
services/apigateway-service/gateway/: CMakeLists.txt  Gateway.cpp  Gateway.h
services/apigateway-service/gateway/command/: IApiCommand.h
services/apigateway-service/gateway/common/: ApiUtilities.h  CommonDefine.h  ConfigManager.cpp  ConfigManager.h  PomodoroProperties.cpp  PomodoroProperties.h  TaskProperties.cpp  TaskProperties.h  UserProperties.cpp  UserProperties.h
services/apigateway-service/include/: ApiGatewayService.h
services/apigateway-service/src/: ApiGatewayService.cpp
services/interfaces/: CMakeLists.txt  IService.h
services/interfaces/export-headers/: ApiGatewayServiceExport.h  ServiceExport.h  ServiceFactoryExport.h  WindowServiceExport.h
services/interfaces/include/: IService.h  IServiceFactory.h  IServiceListener.h
services/interfaces/window-services/: IWMediaService.h
services/service-factory/: CMakeLists.txt
services/service-factory/include/: ServiceFactory.h
services/service-factory/src/: ServiceFactory.cpp
services/window-services/: CMakeLists.txt
services/window-services/tests/: CMakeLists.txt  WindowMediaServiceTest.cpp
(+463 files in other folders)
